{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 18,
  "lineage": "f3274d9f-fdd1-c3fb-1f84-def77a0a34da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:route-table/rtb-09625cfa8bc301bbb",
            "default_route_table_id": "rtb-09625cfa8bc301bbb",
            "id": "rtb-09625cfa8bc301bbb",
            "owner_id": "839684713127",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6b913fe30df4079",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "degault_routing"
            },
            "tags_all": {
              "Name": "degault_routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-070340b64b252f444"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.SG_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009d5fce35d17d28c",
            "arn": "arn:aws:ec2:eu-west-3:839684713127:instance/i-0995e3dff7d68163a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0995e3dff7d68163a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paris",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095e626608812b350",
            "private_dns": "ip-172-31-5-199.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.199",
            "public_dns": "ec2-15-236-42-207.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.42.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014afaa65c3cc06a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef065a1312795ea5",
            "tags": {
              "Name": "insta 0"
            },
            "tags_all": {
              "Name": "insta 0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ccbcd431e8040f3"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009d5fce35d17d28c",
            "arn": "arn:aws:ec2:eu-west-3:839684713127:instance/i-019b9ae3ca3b1e334",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019b9ae3ca3b1e334",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paris",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c94597ed4f6deb5",
            "private_dns": "ip-172-31-24-153.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.153",
            "public_dns": "ec2-13-38-106-101.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.106.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090b6c5bc1c970714",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041d314f2c72ec6e3",
            "tags": {
              "Name": "insta 1"
            },
            "tags_all": {
              "Name": "insta 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ccbcd431e8040f3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:internet-gateway/igw-0a6b913fe30df4079",
            "id": "igw-0a6b913fe30df4079",
            "owner_id": "839684713127",
            "tags": {
              "Name": "igw_lb"
            },
            "tags_all": {
              "Name": "igw_lb"
            },
            "vpc_id": "vpc-070340b64b252f444"
          },
          "dependencies": [
            "aws_vpc.SG_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadblance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:loadbalancer/app/tf-lb-20240210102820812400000001/c0a3ed01bfca2a85",
            "arn_suffix": "app/tf-lb-20240210102820812400000001/c0a3ed01bfca2a85",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240210102820812400000001-299452641.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:loadbalancer/app/tf-lb-20240210102820812400000001/c0a3ed01bfca2a85",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240210102820812400000001",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e19d412a8b97d221"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04daf1a044523effe"
              },
              {
                "subnet_id": "subnet-0fe659bc65ffabd0a"
              }
            ],
            "subnets": [
              "subnet-04daf1a044523effe",
              "subnet-0fe659bc65ffabd0a"
            ],
            "tags": {
              "Name": "load"
            },
            "tags_all": {
              "Name": "load"
            },
            "vpc_id": "vpc-070340b64b252f444",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.SG_group",
            "aws_subnet.subnets",
            "aws_vpc.SG_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:listener/app/tf-lb-20240210102820812400000001/c0a3ed01bfca2a85/cd69823975df982e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:targetgroup/elb-target/375541d6351b3c81",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:listener/app/tf-lb-20240210102820812400000001/c0a3ed01bfca2a85/cd69823975df982e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:loadbalancer/app/tf-lb-20240210102820812400000001/c0a3ed01bfca2a85",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadblance",
            "aws_lb_target_group.tg",
            "aws_security_group.SG_group",
            "aws_subnet.subnets",
            "aws_vpc.SG_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:targetgroup/elb-target/375541d6351b3c81",
            "arn_suffix": "targetgroup/elb-target/375541d6351b3c81",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:839684713127:targetgroup/elb-target/375541d6351b3c81",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "elb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TF-target_group"
            },
            "tags_all": {
              "Name": "TF-target_group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-070340b64b252f444"
          },
          "dependencies": [
            "aws_vpc.SG_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:security-group/sg-0e19d412a8b97d221",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e19d412a8b97d221",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "one_sg",
            "name_prefix": "",
            "owner_id": "839684713127",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070340b64b252f444"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SG_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:subnet/subnet-0fe659bc65ffabd0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe659bc65ffabd0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839684713127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sg_vpc_subnet 0"
            },
            "tags_all": {
              "Name": "sg_vpc_subnet 0"
            },
            "vpc_id": "vpc-070340b64b252f444"
          },
          "dependencies": [
            "aws_vpc.SG_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:subnet/subnet-04daf1a044523effe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04daf1a044523effe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839684713127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sg_vpc_subnet 1"
            },
            "tags_all": {
              "Name": "sg_vpc_subnet 1"
            },
            "vpc_id": "vpc-070340b64b252f444"
          },
          "dependencies": [
            "aws_vpc.SG_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SG_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:vpc/vpc-070340b64b252f444",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-04ea4a1eb70cac60a",
            "default_route_table_id": "rtb-09625cfa8bc301bbb",
            "default_security_group_id": "sg-00e43421be384a8f1",
            "dhcp_options_id": "dopt-0ea364480b0db7103",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070340b64b252f444",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09625cfa8bc301bbb",
            "owner_id": "839684713127",
            "tags": {
              "Name": "sg_vpc"
            },
            "tags_all": {
              "Name": "sg_vpc"
            }
          }
        }
      ]
    }
  ]
}